Refactor executors and enhance ContactCache utility